[gd_scene load_steps=4 format=3 uid="uid://b0crmm72qypu8"]

[ext_resource type="Script" uid="uid://bueryukof68xe" path="res://GUI/employment_contract/employment_contract.gd" id="1_njnv8"]
[ext_resource type="Script" uid="uid://qreitnubhmac" path="res://GUI/employment_contract/signature_area.gd" id="1_okfhl"]
[ext_resource type="AudioStream" uid="uid://nlipwvqkrib0" path="res://Resource/no_sign.mp3" id="3_j41vc"]

[node name="EmploymentContract" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_njnv8")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -135.0
offset_right = 239.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 478.0
offset_bottom = 309.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Employment Contract"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Body" type="RichTextLabel" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "WARNING: This facility contains hazardous environments, unstable structures, and experimental entities.

By signing this contract, you acknowledge the risk of injury, dismemberment, or death during your employment with Ruin Explorer Co.

The company is not liable for accidents, monster attacks, or any related incidents."
fit_content = true

[node name="SignLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Sign Below"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SignatureArea" type="Control" parent="Panel/MarginContainer/VBox"]
custom_minimum_size = Vector2(400, 35)
layout_mode = 2
script = ExtResource("1_okfhl")

[node name="ConfirmButton" type="Button" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.2952965, 0.73101425, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Confirm"
flat = true

[node name="ErrorSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_j41vc")
